sas-core/main/default/objects/Claim_Rebooked_Flight__c/Claim_Rebooked_Flight__c.object-meta.xml
<CustomObject>
    <description>The flights to a which customer claims they were rebooked to.</description>
    <label>Claim Rebooked Flight</label>
    <nameField>
        <displayFormat>CBF-{00000000}</displayFormat>
        <label>Claim Rebooked Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Rebooked Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>