sas-core/main/default/objects/Claim_Rebooked_Flight__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Rebooked Flights</relationshipLabel>
    <relationshipName>Claim_Rebooked_Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>