sas-core/main/default/objects/Claim_Rebooked_Flight__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>E.g. SK1234</description>
    <inlineHelpText>E.g. SK1234</inlineHelpText>
    <label>Flight Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>